<resources>
    <string name="app_name">Asteroides</string>
    <string name="start_btn">Jugar</string>
    <string name="config_btn">Configurar</string>
    <string name="about_btn">Acerca de</string>
    <string name="exit_btn">Salir</string>
    <string name="author_label">Autor</string>
    <string name="date_label">Fecha del proyecto</string>
    <string name="author_name">Ismael Fuentes Sintes</string>
    <string name="creation_date">19 de Octubre de 2022</string>
    <string name="menu_preferences">Preferencias</string>
    <string name="menu_about">Sobre</string>
    <string name="enable_music">Activar sonido</string>
    <string name="graphics">Gráficos</string>
    <string name="graphics_summary">Escoger la configuración de gráficos</string>
    <string name="fragments">Número de fragmentos</string>
    <string name="fragments_summary">Fragmentos en los que se destruye el asteroide</string>
    <string name="settings_multiplayer">Ajustes de multijugador</string>
    <string name="enable_multiplayer">Activar multijugador</string>
    <string name="settings_players">Número de jugadores</string>
    <string name="settings_connection">Tipo de conexión</string>
    <string name="score_btn">Puntuaciones</string>
    <string name="list_empty">No hay puntuaciones</string>
    <string name="controls">Controles</string>
    <string name="controls_summary">Tipo de entrada por defecto</string>
    <string name="option_keyboard">Teclado</string>
    <string name="option_touchpad">Pantalla táctil</string>
    <string name="option_sensors">Sensores de movimiento</string>
</resources>