<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:key="enable_music"
        android:title="@string/enable_music"
    />
    <ListPreference
        android:key="graphics"
        android:title="@string/graphics"
        android:summary="@string/graphics_summary"
        android:entries="@array/graphics_options"
        android:entryValues="@array/graphics_options_values"
        android:defaultValue="2"
    />
    <EditTextPreference
        android:key="fragments"
        android:title="@string/fragments"
        android:summary="@string/fragments_summary"
        android:inputType="number"
        android:defaultValue="3"
    />
    <ListPreference
            android:key="controls"
            android:title="@string/controls"
            android:summary="@string/controls_summary"
            android:entries="@array/control_options"
            android:entryValues="@array/control_options_values"
            android:inputType="number"
            android:defaultValue="2"
    />
    <PreferenceCategory android:title="@string/settings_multiplayer">
        <CheckBoxPreference
                android:key="enable_multiplayer"
                android:title="@string/enable_multiplayer"
        />
        <EditTextPreference
                android:key="max_players"
                android:title="@string/settings_players"
                android:inputType="number"
                android:defaultValue="1"
        />
        <ListPreference
                android:key="connection_type"
                android:title="@string/settings_connection"
                android:entries="@array/connection_options"
                android:entryValues="@array/connection_options_values"
                android:defaultValue="2"
        />
    </PreferenceCategory>
</PreferenceScreen>