<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:padding="30dp">
        <TextView
                android:text="@string/author_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/AuthorLabel" android:textSize="18sp"/>
        <TextView
                android:text="@string/author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/AuthorNameLabel"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="19dp"/>
        <TextView
                android:text="@string/date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/DateLabel" android:textSize="18sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/DateValueLabel"
                android:text="@string/creation_date"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>