<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/main_title"
            android:textSize="34sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/start_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content" android:id="@+id/StartButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title" android:layout_marginTop="68dp"
            app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/config_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content" android:id="@+id/ConfigButton"
            app:layout_constraintTop_toBottomOf="@+id/StartButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/about_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content" android:id="@+id/AboutButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfigButton" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/score_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content" android:id="@+id/QuitButton"
            app:layout_constraintTop_toBottomOf="@+id/AboutButton" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.501"/>
</androidx.constraintlayout.widget.ConstraintLayout>